build java 19 project - fixed issues