@@ -3,4 +3,5 @@ export DEFAULT_DB_PASS=test;
 export DEFAULT_DB_HOST=localhost;
 export DEFAULT_DB_PORT=3306;
 export DEFAULT_DB_NAME=users;
-java -jar app/target/app-1.0-SNAPSHOT.jar ./config/app.yml
+java -jar  --enable-preview app/target/app-1.0-SNAPSHOT.jar ./config/app.yml
+
